# AI_CPP

./: .gitignore  README.md
haar/: CMakeLists.txt  README.md  haar.cpp
hog/: CMakeLists.txt  README.md  hog.cpp
